added basic javascript fetch function

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,18 +1,6 @@
 @import "https://unpkg.com/open-props";
 @import "https://unpkg.com/open-props/normalize.min.css";
 
-:root {
-    /* light theme */
---light-bg: #F6F4EB;
---light-btn: #91c8e4;
---light-header: #4682A9;
-
-     /* dark theme */
---dark-bg: #212A3E;
---dark-btn: #D4ADFC;
---dark-header: #0C134F;
-}
-
 .media-scroller {
     --spacer: 2rem;
     display: grid;
@@ -54,4 +42,14 @@
 
 .header {
     background: var(--cyan-12);
+}
+
+.lightModeBtn {
+    
+
+
+}
+
+.darkModeBtn {
+
 }
