finished fetch function, albums display on screen, keydown function for enter key

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -54,6 +54,10 @@ make it work */
     background: var(--cyan-12);
 }
 
+#albums {
+    color: white;
+}
+
 #light-dark {
     display: contents;
 }
