--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,10 +3,14 @@
 /* on first page load, should start on light */
 body {
     background-color: lightcoral;
+    color: black;
 }
 
 
-.dark-mode
+.dark-mode {
+    background-color: darkred;
+    color: lightblue;
+}
 
 .media-scroller {
     --spacer: 2rem;
