--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -44,8 +44,18 @@
     background: var(--cyan-12);
 }
 
+#genre-number-input {
+    color: white;
+}
+
+#genres {
+    border: 1px solid red;
+    color: white;
+}
+
 #albums {
     color: white;
+    border: 1px solid orange;
 }
 
 #light-dark {
