--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,15 +3,15 @@
 /* on first page load, should start on light */
 body {
     background-color: lightcoral;
-    color: black;
 }
-
 
 .dark-mode {
-    background-color: darkred;
-    color: lightblue;
+    background-color: darkblue;
 }
 
+#light-dark {
+    display: contents;
+}
 .media-scroller {
     --spacer: 2rem;
     display: grid;
@@ -59,7 +59,5 @@ body {
     color: white;
 }
 
-#light-dark {
-    display: contents;
-}
+
 
