Added sun and moon icons to light and dark mode toggle

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,6 +18,11 @@ body {
     display: contents;
 }
 
+.sun, .moon {
+    width: 20px;
+    height: auto;
+}
+
 main label {
     color: var(--text-color)
 }
